# paper2wikijs

./: .env.example  .gitignore  ENV_SETUP.md  EXAMPLES.md  README.md  cli.py  main.py  paper2wiki.md  pyproject.toml
src/paper2wikijs/: __init__.py  config.py  knowledge_processor.py  sciencedaily_extractor.py  service.py  translation_service.py  wikijs_client.py
