[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper2wikijs"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [{ name = "Kuan-Lun Wang" }]
license = { text = "GNU Affero General Public License v3" }
dependencies = [
    "requests>=2.32.4",
    "types-requests>=2.32.4.20250611",
    "beautifulsoup4>=4.13.4",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "python-dotenv>=1.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Kuan-Lun/paper2wikijs"
Source = "https://github.com/Kuan-Lun/paper2wikijs"
Tracker = "https://github.com/Kuan-Lun/paper2wikijs/issues"

[tool.setuptools]
packages = ["paper2wikijs"]
package-dir = { paper2wikijs = "src/paper2wikijs" }
package-data = { paper2wikijs = ["py.typed"] }
